# acr-HAi

./: .gitignore  cluade.md  logic.md
backend/: alembic.ini  pyproject.toml  run_dev.py
backend/alembic/: env.py
backend/data/layouts/: 1.json  2.json
backend/src/: config.py  deps.py  event_handlers.py  handler_support.py  main.py  seed.py
backend/src/ess/: router.py
backend/src/ess/application/: fleet_manager.py  path_planner.py  task_executor.py  tote_origin_tracker.py  traffic_controller.py  zone_manager.py
backend/src/ess/domain/: enums.py  events.py  models.py
backend/src/ess/infrastructure/: redis_cache.py  repositories.py
backend/src/ess/simulation/: order_generator.py  physics_engine.py  presets.py  robot_simulator.py  station_operator.py
backend/src/handlers/: __init__.py  arrival_handlers.py  equipment_handlers.py  order_handlers.py  pick_task_handlers.py
backend/src/monitoring/: alarm_service.py  metrics_service.py  router.py
backend/src/shared/: database.py  event_bus.py  redis.py  simulation_state.py  snapshot_builder.py  websocket_manager.py
backend/src/wes/: router.py
backend/src/wes/application/: allocation_engine.py  inventory_service.py  order_service.py  pick_task_service.py  reservation_service.py  station_queue_service.py  station_service.py
backend/src/wms_adapter/: outbound.py  router.py  schemas.py
backend/tests/: e2e_test.py
backend/tests/ess/: test_path_planner.py  test_task_executor.py
backend/tests/integration/: test_event_flow.py
backend/tests/wes/: test_allocation_engine.py  test_pick_task_sm.py
(+60 files in other folders)
